--- a/assets/style.css
+++ b/assets/style.css
@@ -73,35 +73,41 @@ a {
   font-size: 20px;
   }
 
+.containerMap {
+  display: flex;
+  flex-direction: row;
+}
+
 #map { 
   height: 300px; 
   margin:30px;
 
 }
 
-.flex-container {
-  display: flex;
-  flex-direction: row;
+.outerContainer{
+display: flex;
+flex-direction: column;
 }
 
-.flex-container > div {
-  border: 10px solid transparent;
-  border-image: url(../assets/images/african-print.webp) 30 round;
-  width: 300px;
-  margin: 30px;
-  text-align: center;  
-  font-size: 20px;  
-  padding: 15px;
+.container1 {
+display: flex;
+flex-direction: row;
 }
+
 
 /*image gallery on activities page */
 
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
   background-color: transparent;
+  border: 10px solid transparent;
+  border-image: url(../assets/images/african-print.webp) 30 round;
   width: 300px;
   height: 350px;
-  margin: 30px;
+  margin: 20px;
+  text-align: center;  
+  font-size: 20px;  
+  padding: 15px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
@@ -142,5 +148,31 @@ a {
 .table-data {
   text-align: left;
 }
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc; 
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+
 
 
