--- a/assets/style.css
+++ b/assets/style.css
@@ -94,7 +94,7 @@ a {
   border-image: url(../assets/images/african-print.webp) 30 round;
   width: 300px;
   height: 350px;
-  margin: 20px;
+  margin: 30px;
   text-align: center;  
   font-size: 20px;  
   padding: 15px;
@@ -248,6 +248,23 @@ input, textarea {
   font-size: 20px;
 }
 
+/*about page*/
+
+.activitiesBox{
+  display: flex;
+  flex-direction: row;
+}
+
+.box1{
+  background-color: blue;
+  height: 10px;
+  width: 10px;
+}
+
+.box2{
+  background-color: green;
+  height: 10px;
+  width: 10px;
 }
 
 
