--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ body, html {
 
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/images/hero-image.webp");
-  height: 50%;
+  height: 100%;
   background-position: center;
   background-repeat: repeat-x;
   background-size: cover;
@@ -43,7 +43,10 @@ a {
   color: rgba(153, 30, 2, 1);
 }
 
+/* hero text*/
+
 .hero-text {
+  font-size: 50px;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -52,7 +55,7 @@ a {
   color: white;
 }
 
-.hero-text button {
+/*.hero-text button {
   border: none;
   outline: 0;
   display: inline-block;
@@ -65,7 +68,7 @@ a {
 
 .hero-text button:hover {
   color: white;
-}
+}*/
 
 /*first section of text*/
 
@@ -248,9 +251,7 @@ h4{
   color: black;
 }
 
-.email {
-  width: 900px;
-}
+
 .formContents {
   margin: 30px 20px 30px 100px;
   color: #F1F2F4;
@@ -322,5 +323,10 @@ background-color: darkred;
 z-index: 1;
 display: inline-flex;
 flex-direction: column;
+}
+
+/* Smartphones ----------- */
+@media screen and (max-width: 425px) {
+    
 }
 
