changed the featured section to be more responsive

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,8 @@ a {
 .featuredContainerOuter{
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-content: center;
 }
 
   .featuredContainer{
