--- a/assets/style.css
+++ b/assets/style.css
@@ -69,7 +69,8 @@ a {
 
 /*headings on index and activities page*/
 .pageHeading{
-  margin: 0 0 0 500px;
+  display: flex;
+  justify-content: center;
   color: rgba(153, 30, 2, 1) ;
 }  
 
