--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@ body, html {
 
 header {
   display: inherit;
-  height: 3%;
+  height: 10%;
 }
 
 #logo{
@@ -80,9 +80,10 @@ a {
 /*first section of text*/
 
 .site-info{
+  height: 20%;
   background-color: rgba(153, 30, 2, 1);
   color: #fafafa;
-  margin:30px;
+  justify-content: center;
   text-align: center;
   line-height: 75px;
   font-size: 20px;
