--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@ body, html {
 
 header {
   display: inherit;
-  height: 10%;
+  height: 3%;
 }
 
 #logo{
@@ -61,19 +61,6 @@ a {
     width: 100%;
     background: url("../assets/images/hero-image.webp") no-repeat center center;
 
-}
-
-
-/* hero text*/
-
-.hero-text {
-  font-size: 50px;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgba(153, 30, 2, 1);
 }
 
 
@@ -288,6 +275,10 @@ h4{
 
 
 /*about page*/
+
+.header {
+  height: 60%;
+}
 
 .activitiesBox{
   display: flex;
