--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,13 @@ header {
     font-size: 280%;
 }
 
+h1{
+  font-size: 50px;
+  text-align: center;
+  color: rgba(153, 30, 2, 1);
+  margin: 0;
+}
+
 h2 {
   margin: 0;
   padding: 0;
@@ -60,6 +67,7 @@ a {
     height:600px;
     width: 100%;
     background: url("../assets/images/hero-image.webp") no-repeat center center;
+    margin: 0;
 
 }
 
