--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,7 @@ a {
   font-size: 20px;
 }
 
+
 /*headings on index and activities page*/
 .pageHeading{
   display: flex;
@@ -335,6 +336,42 @@ z-index: 1;
 display: inline-flex;
 flex-direction: column;
 }
+
+/***footer**/
+
+.footerContainer {
+  display: flex;
+  flex-direction: row;
+  column-count: 2;
+  background-color: rgba(153, 30, 2, 1);
+  color: #fafafa;
+  font-size: 20px;
+}
+
+
+.footerFormContents {
+justify-content: left;
+  color: #F1F2F4;
+}
+
+form.footerFormContents{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 80%;
+  margin: 0 30px 0 30px;
+  text-align: center;
+}
+
+.img2 {
+  border-radius: 40%;
+  display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
+margin-top: 20%;
+}
+
 
 
 /*------------------media queries---*/
