--- a/assets/style.css
+++ b/assets/style.css
@@ -339,37 +339,23 @@ flex-direction: column;
 
 /***footer**/
 
-.footerContainer {
-  display: flex;
-  flex-direction: row;
-  column-count: 2;
-  background-color: rgba(153, 30, 2, 1);
-  color: #fafafa;
-  font-size: 20px;
-}
 
 
-.footerFormContents {
-justify-content: left;
-  color: #F1F2F4;
-}
 
-form.footerFormContents{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 80%;
-  margin: 0 30px 0 30px;
+#social-networks{
   text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    background-color: rgba(153, 30, 2, 1);
+
 }
 
-.img2 {
-  border-radius: 40%;
-  display: block;
-margin-left: auto;
-margin-right: auto;
-width: 50%;
-margin-top: 20%;
+.socials {
+    display: list-item;
+    text-align: -webkit-match-parent;
+    color: #fafafa;
 }
 
 
