--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,9 @@ body, html {
   background-color: #F1F2F4;
 }
 
+div{
+  display: flex;
+}
 
 /*** index page **/ 
 
@@ -109,15 +112,35 @@ a {
   
 }
 
-  .featuredContainer{
-    border: 10px solid transparent;
+  .featuredContainerLeft{
+  border: 10px solid transparent;
   border-image: url(../assets/images/african-print.webp) 30 round;
-  width: 300px;
-  height: 350px;
-  margin: 50px;
+  width: 28%;
+  margin: 10px;
   text-align: center;  
-  font-size: 20px;  
-  padding: 15px;
+  font-size: 20px;
+  padding: 15px; 
+  }
+
+  .featuredContainerRight{
+  border: 10px solid transparent;
+  border-image: url(../assets/images/african-print.webp) 30 round;
+  width: 28%;
+  margin: 10px;
+  float: left;
+  text-align: center;  
+  font-size: 20px;
+  padding: 15px; 
+  }
+
+  .featuredContainerCenter{
+  border: 10px solid transparent;
+  border-image: url(../assets/images/african-print.webp) 30 round;
+  width: 28%;
+  margin: 10px;
+  text-align: center;  
+  font-size: 20px;
+  padding: 15px; 
   }
 
 
@@ -153,7 +176,7 @@ p {
 }
 
 .images {
-  width:290px;
+  width:80%;
   height:300px;
 }
 
@@ -351,81 +374,38 @@ h4{
 /*mobile small 320px*/
 @media all  and (max-width: 319px) {
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/images/hero-image.webp");
-  height: 100%;
-  width: 315px;
-  background-position: center;
-  background-repeat: repeat-x;
-  background-size: cover;
-  position: relative;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  font-size: 20px;
-}
-
-
-.site-info{
-margin: 0;
-line-height: 40px;
-font-size: 20px;
-}
-
-.pageHeading {
-  margin: 0 0 0 25px;
-}
-
-.flex-container1 {
-  margin: 0;
-}
-
-.images {
-  width:100%;
-  height:250px;
-}
-
-h2 {
-  font-size: 20px;
-}
-
-.table-data {
-  text-align: left;
-  font-size: 15px;
-}
-
-
-.formHeader{
- padding: 5px;
-}
-
-
-.formContents {
-  margin: 0;
-  color: #F1F2F4;
-}
-
-.formSubmit {
-  margin: 0;
-]
-
 }
 
 /* mobile Medium 375px*/
-@media all  and (max-width: 375px) {
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/images/hero-image.webp");
-  height: 100%;
-  width: 374px;
-  background-position: center;
-  background-repeat: repeat-x;
-  background-size: cover;
-  position: relative;
+
+/* mobile Large 425px*/
+@media screen  and (max-width: 425px) {
+
+#menu{
+    font-size: 90%;
+    list-style-type: none;
+    letter-spacing: 1px;
+}
+
+#menu li {
+    float: right;
+   }
+
+.hero-outer{
+    height:600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+.hero-image{
+    height:600px;
+    width: 100%;
+    background:url("../assets/images/jpeg-png/hero-image.png") no-repeat center center;
+    margin: 0;
+    padding: 0;
 }
 
 ul {
@@ -445,11 +425,33 @@ font-size: 20px;
 }
 
 .pageHeading {
-  margin: 0 0 0 25px;
+  margin-left: 25%;
 }
 
+.featuredContainerOuter{
+  flex-wrap: wrap;
+}
+
+.featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter{
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+
+.findOutMore{
+  font-size: 17px;
+  margin:25%;
+  width: 100px;
+  color: rgba(153, 30, 2, 1);
+}
+
+
+
+
+/****ACTIVITIES PAGE***/
 .flex-container1 {
   margin: 0;
+  flex-wrap: wrap;
 }
 
 .images {
@@ -479,7 +481,7 @@ h2 {
 
 .formSubmit {
   margin: 0;
-]
+}
 
 }
 
