--- a/assets/style.css
+++ b/assets/style.css
@@ -425,7 +425,7 @@ font-size: 20px;
 }
 
 .pageHeading {
-  margin-left: 25%;
+  
 }
 
 .featuredContainerOuter{
@@ -437,11 +437,16 @@ font-size: 20px;
   width: 100%;
 }
 
+.activity-info {
+  flex-wrap: wrap;
+  font-size: 50px;
+}
+
 
 .findOutMore{
-  font-size: 17px;
-  margin:25%;
+  font-size: 16px;  
   width: 100px;
+  justify-content: center;
   color: rgba(153, 30, 2, 1);
 }
 
@@ -456,11 +461,11 @@ font-size: 20px;
 
 .images {
   width:100%;
-  height:250px;
+  height:auto;
 }
 
 h2 {
-  font-size: 20px;
+  font-size: 40px;
 }
 
 .table-data {
