further edits to about page responsivness @320px

--- a/assets/style.css
+++ b/assets/style.css
@@ -505,8 +505,29 @@ width: 100%;
 }
 
 /***ABOUT PAGE ***/
+
+/**ABout page test**/
+
+.aboutContainerBox{
+  display: flex;
+  flex-direction: column;
+}
+
+.box1{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 #aboutpageH2{
   font-size: 20px;
+}
+.img1{
+  width: 100%;
+}
+
+.map{
+  size: 30px;
 }
 
 }
