--- a/assets/style.css
+++ b/assets/style.css
@@ -526,16 +526,13 @@ width: 100%;
   width: 100%;
 }
 
-.map{
-  size: 30px;
-}
-
 }
 
 /* mobile Medium 375px*/
 @media screen  and (max-width: 375px) {
 /****HOME PAGE****/
 
+/*nav bar*/
 header{
 display: flex;
   flex-direction: column;
@@ -550,10 +547,50 @@ display: flex;
 #menu li {
     float: right;
     margin-right: 10px;
+    font-size: 20px;
    }
 
-.h2{
-  font-size: 30px;
+/*find your people header*/
+
+h1{
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 40px;
+  justify-content: center;
+}
+
+/**Home page text**/
+
+.site-info{
+  line-height: 40px;
+}
+
+/**top pick for Aug header**/
+
+#pageHeading{
+  display: flex;
+  flex-direction: column;
+}
+
+.pageHeading{
+  font-size: 22px;
+}
+
+/***Featured activities boxes***/
+
+.featuredContainerOuter{
+  display: flex;
+  flex-direction: column;   
+}
+
+.featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter {
+width: 80%;
+flex-wrap: wrap;
+}
+
+#imagesIndex {
+  width: 100%;
+  height: auto;
 }
 
 .activity-info {
@@ -562,30 +599,74 @@ display: flex;
 
 
 /**** ACTIVITIES PAGE****/
+/**Activities section FLIP CARD FRONT **/
+.flip-card-front {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.activityTitle{
+display: flex;
+flex-direction: row;
+justify-content: center;
+width: 100%;
+}
+
+#activityTitle{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.images {
+  width: 100%;
+  height: 70%;
+}
+
+/**Activities section FLIP CARD BACK **/
+
+.flip-card-back{
+  display: flex;
+  flex-direction: column;
+}
+
+.activitiesH2{
+  line-height: 50px;
+  font-size: 30px;
+}
 
 .eventText {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .table-data{
   font-size: 15px ;
 }
 
+/**Activities page forms**/
+
+.flex-container2{
+  display: flex;
+  flex-direction: column;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  margin:10px;
+}
 .formHeader{
-  font-size: 15px;
+  font-size: 20px;
 
 }
 
 .formContents{
-  margin: 10px;
+  margin: 0;
   width: 100%;
-  display: inline-grid;
-
 }
 
-/***ABOUT PAGE ***/
-#aboutpageH2{
-  font-size: 20px;
+#activityDetails{
+  width: 90%;
 }
 
 }
