--- a/assets/style.css
+++ b/assets/style.css
@@ -391,6 +391,7 @@ display: flex;
 #menu li {
     float: right;
     margin-right: 10px;
+
    }
 
 /**text on home page**/
@@ -547,7 +548,7 @@ display: flex;
 #menu li {
     float: right;
     margin-right: 10px;
-    font-size: 20px;
+    
    }
 
 /*find your people header*/
@@ -700,8 +701,9 @@ width: 100%;
 
 /****HOME PAGE****/
 @media screen  and (max-width: 425px) {
+/****HOME PAGE****/
 
-/***HOME PAGE***/
+/*nav bar*/
 header{
 display: flex;
   flex-direction: column;
@@ -716,10 +718,50 @@ display: flex;
 #menu li {
     float: right;
     margin-right: 10px;
+    
    }
 
-.h2{
-  font-size: 30px;
+/*find your people header*/
+
+h1{
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 40px;
+  justify-content: center;
+}
+
+/**Home page text**/
+
+.site-info{
+  line-height: 40px;
+}
+
+/**top pick for Aug header**/
+
+#pageHeading{
+  display: flex;
+  flex-direction: column;
+}
+
+.pageHeading{
+  font-size: 20px;
+}
+
+/***Featured activities boxes***/
+
+.featuredContainerOuter{
+  display: flex;
+  flex-direction: column;   
+}
+
+.featuredContainerLeft, .featuredContainerRight, .featuredContainerCenter {
+width: 80%;
+flex-wrap: wrap;
+}
+
+#imagesIndex {
+  width: 100%;
+  height: auto;
 }
 
 .activity-info {
@@ -728,31 +770,103 @@ display: flex;
 
 
 /**** ACTIVITIES PAGE****/
+/**Activities section FLIP CARD FRONT **/
+.flip-card-front {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.activityTitle{
+display: flex;
+flex-direction: row;
+justify-content: center;
+width: 100%;
+}
+
+#activityTitle{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.images {
+  width: 100%;
+  height: 70%;
+}
+
+/**Activities section FLIP CARD BACK **/
+
+.flip-card-back{
+  display: flex;
+  flex-direction: column;
+}
+
+.activitiesH2{
+  line-height: 50px;
+  font-size: 30px;
+}
 
 .eventText {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .table-data{
   font-size: 15px ;
 }
 
+/**Activities page forms**/
+
+.flex-container2{
+  display: flex;
+  flex-direction: column;
+}
+
+.form{
+  display: flex;
+  flex-direction: column;
+  margin:10px;
+}
 .formHeader{
-  font-size: 15px;
+  font-size: 20px;
 
 }
 
 .formContents{
-  margin: 10px;
+  margin: 0;
   width: 100%;
-  display: inline-grid;
+}
 
+#activityDetails{
+  width: 90%;
 }
 
 /***ABOUT PAGE ***/
+
+/**About page text**/
+
+.aboutContainerBox{
+  display: flex;
+  flex-direction: column;
+}
+
+.box1{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 #aboutpageH2{
   font-size: 20px;
+  margin: 5%;
 }
+.img1{
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  margin: 10%;
+ 
+}
+
 
 }
 
