--- a/assets/style.css
+++ b/assets/style.css
@@ -868,7 +868,7 @@ width: 100%;
 
 }
 
-/** mobile large 768px**/
+/** Tablet 768px**/
 @media screen and (max-width:768px) {
   /****HOME PAGE****/
 
@@ -953,11 +953,26 @@ justify-content: space-around;
 
 
 /**** ACTIVITIES PAGE****/
+
+/*** activities container***/
+
+.flex-container1{
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.flip-card{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+}
+
 /**Activities section FLIP CARD FRONT **/
 .flip-card-front {
   display: flex;
-  flex-wrap: wrap;
-}
+  flex-direction: column;
+ }
 
 .activityTitle{
 display: flex;
@@ -1010,12 +1025,12 @@ width: 100%;
   margin:10px;
 }
 .formHeader{
-  font-size: 20px;
+  font-size: 30px;
 
 }
 
 .formContents{
-  margin: 0;
+  margin: 2%;
   width: 100%;
 }
 
@@ -1046,8 +1061,8 @@ width: 100%;
 .img1{
   display: flex;
   flex-direction: row;
-  width: 80%;
-  margin: 10%;
+  width: 60%;
+  margin: 0 20% 5% 20%;
  }
 
 }
